added home section and mobile responsive

--- a/index.html
+++ b/index.html
@@ -20,18 +20,34 @@
                 </svg>
             </button>
             <ul class="navlinks">
-                <li><a href="#">Home</a></li>
+                <li><a href="#home">Home</a></li>
                 <li><a href="#">Skills</a></li>
                 <li><a href="#">Projects</a></li>
                 <li><a href="#">Contact Me</a></li>
             </ul>
         </nav>
+
+        <!-- Home Section -->
+        <section class="home" id="home">
+            <div class="home__left">
+                <h3>&lt; Hello World &gt;</h3>
+                <h2>My name is Ouzair. I am a Frontend Developer from India.</h2>
+                <button class="btn__outline">Contact Me</button>
+            </div>
+            <div class="home__right">   
+                <img src="./assets/images/1594.jpg">
+            </div>
+        </section>
+
+        <!-- Skill section -->
+        <section class="skills" id="skills">
+            
+        </section>
+
+        <!-- Project Section -->
+        <!-- Contact Me section -->
     </div>
 
-    <section class="hero">
-        <!-- Todo: write a hero section -->
-        <!-- todo: get an image for the hero section -->
-    </section>
 
     <script src="./src/script.js"></script>
 </body>
