--- a/index.html
+++ b/index.html
@@ -19,18 +19,20 @@
                     </rect>
                 </svg>
             </button>
+            <!-- todo: need to add socials -->
             <ul class="navlinks">
                 <li><a href="#home">Home</a></li>
-                <li><a href="#">Skills</a></li>
+                <li><a href="#skills">Skills</a></li>
                 <li><a href="#">Projects</a></li>
                 <li><a href="#">Contact Me</a></li>
             </ul>
+
         </nav>
 
         <!-- Home Section -->
         <section class="home" id="home">
             <div class="home__left">
-                <h3>&lt; Hello World &gt;</h3>
+                <h3 class="section__title">&lt;Hello World&gt;</h3>
                 <h2>My name is Ouzair. I am a Frontend Developer from India.</h2>
                 <button class="btn__outline">Contact Me</button>
             </div>
@@ -39,13 +41,64 @@
             </div>
         </section>
 
-        <!-- Skill section -->
-        <section class="skills" id="skills">
-            
+        <!-- Skills section -->
+        <section class="skills__container" id="skills">
+            <h3 class="section__title">&lt;Skills&gt;</h3>
+            <div class="section__content">
+                <div class="skills__desc">
+                    <h2>Skills I possess as a Frontend Developer</h2>
+                    <ul>
+                        <li>Website development</li>
+                        <li>Responsive web design</li>
+                        <li>Excellent grasp on fundamental concepts</li>
+                        <li>Solid understanding of styling tools like TailwindCSS and Bootstrap</li>
+                        <li>Knowledge of CSS preprocessors as well</li>
+                        <li>Familiar with bundler packages like Webpack, Babel and Parcel</li>
+                    </ul>
+                </div>
+                <div class="skills__list">
+                    <div class="skills__icon">
+                        <img src="./assets/images/html.png" alt="html">
+                    </div>
+                    <div class="skills__icon">
+                        <img src="./assets/images/css.png" alt="css">
+                    </div>
+                    <div class="skills__icon">
+                        <img src="./assets/images/javascript.png" alt="javascript">
+                    </div>
+                    <div class="skills__icon">
+                        <img src="./assets/images/tailwind.png" alt="tailwind">
+                    </div>
+                    <div class="skills__icon">
+                        <img src="./assets/images/sass.png" alt="sass">
+                    </div>
+                    <div class="skills__icon">
+                        <img src="./assets/images/bootstrap.png" alt="bootstrap">
+                    </div>
+                    <div class="skills__icon">
+                        <img src="./assets/images/react.png" alt="react">
+                    </div>
+                    <div class="skills__icon">
+                        <img src="./assets/images/git.png" alt="git">
+                    </div>
+                    <div class="skills__icon">
+                        <img src="./assets/images/github.png" alt="github">
+                    </div>
+                    <div class="skills__icon">
+                        <img src="./assets/images/linux.png" alt="linux">
+                    </div>
+                    <div class="skills__icon">
+                        <img src="./assets/images/vscode.png" alt="vscode">
+                    </div>
+                    <div class="skills__icon">
+                        <img src="./assets/images/nodejs.png" alt="nodejs">
+                    </div>
+                </div>
+            </div>
         </section>
 
-        <!-- Project Section -->
-        <!-- Contact Me section -->
+        <!-- todo: Project Section -->
+        <!-- todo: Contact Me section -->
     </div>
 
 
