--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Zair &lt;Dev&gt;</title>
 </head>
 <body>
-    <div class="container">
+    <main class="container">
         <nav class="nav">
             <button class="hamburger" aria-controls="primary-navigation" aria-expanded="false">
                 <svg class="hamburger_svg" viewBox="0 0 100 100" width="25">
@@ -26,11 +26,10 @@
                 <li><a href="#">Projects</a></li>
                 <li><a href="#contact">Contact Me</a></li>
             </ul>
-
         </nav>
 
         <!-- Home Section -->
-        <section class="home child" id="home">
+        <section class="home" id="home">
             <div class="home__left">
                 <h3 class="section__title">&lt;Hello World&gt;</h3>
                 <h2>My name is Ouzair. I am a Frontend Developer from India.</h2>
@@ -42,7 +41,7 @@
         </section>
 
         <!-- Skills section -->
-        <section class="skills__container child" id="skills">
+        <section class="skills__container" id="skills">
             <h3 class="section__title">&lt;Skills&gt;</h3>
             <div class="section__content">
                 <div class="skills__desc">
@@ -99,7 +98,7 @@
 
         <!-- todo: Project Section -->
         <!-- todo: Contact Me section -->
-        <section class="contact__container child" id="contact">
+        <section class="contact__container" id="contact">
             <h3 class="section__title">&lt;Contact Me&gt;</h3>
             <div class="contact__content">
                 <div class="contact__desc">
@@ -121,7 +120,7 @@
                 </form>
             </div>
         </section>
-    </div>
+    </main>
 
 
     <script src="./src/script.js"></script>
